--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -11,10 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns \n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.ensemble import GradientBoostingClassifier, ExtraTreesClassifier, StackingClassifier\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, cross_val_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "#read file\n",
     "df = pd.read_csv(\"car_eval_train.csv\")\n",
@@ -23,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "15ad0ceb",
    "metadata": {},
    "outputs": [
@@ -121,7 +118,7 @@
        "4   4   high    low     2       4      med    low"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "21647221",
    "metadata": {},
    "outputs": [
@@ -170,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "e290f0b2",
    "metadata": {},
    "outputs": [
@@ -185,7 +182,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "9acdf9f8",
    "metadata": {},
    "outputs": [
@@ -205,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_2799/609437354.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\aathi\\AppData\\Local\\Temp\\ipykernel_9560\\609437354.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_en = df_en.replace({True: 1, False: 0})\n"
      ]
     },
@@ -371,7 +368,7 @@
        "4               1           0           0      0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "d86d3b80-a73e-4649-a93a-a22ae9b66243",
    "metadata": {},
    "outputs": [
@@ -424,7 +421,7 @@
     "\n",
     "# Train Gradient Boosting model\n",
     "best_gb_clf = GradientBoostingClassifier(\n",
-    "    learning_rate=0.1,\n",
+    "    learning_rate=0.2,\n",
     "    max_depth=3,\n",
     "    n_estimators=700,\n",
     "    subsample=1.0,\n",
@@ -460,140 +457,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "5898f96f-fe62-43bf-bc99-bd623e91567a",
+   "execution_count": null,
+   "id": "c2c3a6e5-03a1-4e5b-a9e0-31f39f5748ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submission file saved as submission.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Assume df_en is your one-hot encoded DataFrame with a 'class' target column.\n",
     "X = df_en.drop(columns=[\"class\"])  # Features\n",
-    "y = df_en[\"class\"]  # Target\n",
-    "\n",
-    "# Train optimized Gradient Boosting model on the entire dataset\n",
-    "best_gb_clf = GradientBoostingClassifier(\n",
-    "    learning_rate=0.05,\n",
-    "    max_depth=3,\n",
-    "    n_estimators=1000,\n",
-    "    subsample=1.0,\n",
-    "    min_samples_split=2,\n",
-    "    min_samples_leaf=5,\n",
-    "    random_state=42\n",
-    ")\n",
-    "best_gb_clf.fit(X, y)\n",
-    "\n",
-    "# Process test dataset\n",
-    "if 'df_test' in globals():\n",
-    "    test_ids = df_test[\"id\"]  # Preserve test IDs\n",
-    "    X_test = pd.get_dummies(df_test.drop(columns=[\"id\"]), columns=names, drop_first=True)\n",
-    "    \n",
-    "    # Ensure all features match the training set\n",
-    "    missing_cols = set(X.columns) - set(X_test.columns)\n",
-    "    for col in missing_cols:\n",
-    "        X_test[col] = 0  # Add missing columns with default value 0\n",
-    "    \n",
-    "    X_test = X_test[X.columns]  # Reorder columns to match training data\n",
-    "\n",
-    "    # Predict on the test data\n",
-    "    test_preds = best_gb_clf.predict(X_test)\n",
-    "\n",
-    "    # Convert numerical predictions back to original class labels\n",
-    "    reverse_class_mapping = {0: \"unacc\", 1: \"acc\", 2: \"good\", 3: \"vgood\"}\n",
-    "    test_preds = [reverse_class_mapping[pred] for pred in test_preds]\n",
-    "\n",
-    "    # Create submission file with correct format\n",
-    "    submission = pd.DataFrame({\"id\": test_ids, \"output\": test_preds})\n",
-    "    submission.to_csv(\"submission.csv\", index=False)\n",
-    "    print(\"Submission file saved as submission.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "c2c3a6e5-03a1-4e5b-a9e0-31f39f5748ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 10 folds for each of 20 candidates, totalling 200 fits\n",
-      "Best Parameters for Gradient Boosting: {'subsample': 1.0, 'n_estimators': 1000, 'min_samples_split': 2, 'min_samples_leaf': 5, 'max_depth': 3, 'learning_rate': 0.05}\n",
-      "Validation Accuracy: 0.9892\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Assume df_en is your one-hot encoded DataFrame with a 'class' target column.\n",
-    "X = df_en.drop(columns=[\"class\"])  # Features\n",
-    "y = df_en[\"class\"]  # Target\n",
+    "y = df_en[\"class\"]                 # Target\n",
     "\n",
     "# Split data into training and validation sets (80% train, 20% validation)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Extra Trees Classifier (More randomness, reduces overfitting)\n",
-    "et_clf = ExtraTreesClassifier(\n",
-    "    n_estimators=1000,\n",
-    "    max_depth=None,\n",
-    "    min_samples_split=5,\n",
-    "    min_samples_leaf=2,\n",
-    "    random_state=42,\n",
-    "    n_jobs=-1\n",
-    ")\n",
-    "\n",
-    "# Gradient Boosting with RandomizedSearchCV for better hyperparameter tuning\n",
-    "param_dist = {\n",
-    "    'n_estimators': [500, 1000, 2000],\n",
-    "    'learning_rate': [0.01, 0.05, 0.1],\n",
-    "    'max_depth': [3, 5, 7],\n",
-    "    'subsample': [0.8, 0.9, 1.0],\n",
-    "    'min_samples_split': [2, 5, 10],\n",
-    "    'min_samples_leaf': [1, 3, 5]\n",
+    "# Define a parameter grid for tuning:\n",
+    "param_grid = {\n",
+    "    'n_estimators': [300, 500, 700],      # Number of trees\n",
+    "    'learning_rate': [0.01, 0.05, 0.1],     # Contribution of each tree\n",
+    "    'max_depth': [3, 5, 7],                 # Maximum depth of each tree\n",
+    "    'subsample': [0.8, 0.9, 1.0]            # Fraction of samples for fitting individual trees\n",
     "}\n",
     "\n",
-    "random_search = RandomizedSearchCV(\n",
-    "    GradientBoostingClassifier(random_state=42),\n",
-    "    param_distributions=param_dist,\n",
-    "    n_iter=20,  # Try 20 different settings\n",
-    "    cv=10,\n",
+    "# Initialize the Gradient Boosting Classifier with a fixed random_state for reproducibility.\n",
+    "gb_clf = GradientBoostingClassifier(random_state=42)\n",
+    "\n",
+    "# Use GridSearchCV to search for the best parameter combination.\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=gb_clf,\n",
+    "    param_grid=param_grid,\n",
+    "    cv=5,                    # 5-fold cross-validation\n",
     "    scoring='accuracy',\n",
     "    n_jobs=-1,\n",
-    "    verbose=2,\n",
-    "    random_state=42\n",
+    "    verbose=2\n",
     ")\n",
-    "random_search.fit(X_train, y_train)\n",
-    "print(\"Best Parameters for Gradient Boosting:\", random_search.best_params_)\n",
+    "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "best_gb_clf = random_search.best_estimator_\n",
+    "print(\"Best parameters found:\", grid_search.best_params_)\n",
     "\n",
-    "# Stacking Classifier (Combines multiple models for better accuracy)\n",
-    "stacked_clf = StackingClassifier(\n",
-    "    estimators=[\n",
-    "        ('et', et_clf),\n",
-    "        ('gb', best_gb_clf),\n",
-    "    ],\n",
-    "    final_estimator=LogisticRegression(),\n",
-    "    n_jobs=-1\n",
-    ")\n",
+    "# Retrieve the best estimator from grid search.\n",
+    "best_gb_clf = grid_search.best_estimator_\n",
     "\n",
-    "# Train stacked classifier\n",
-    "stacked_clf.fit(X_train, y_train)\n",
+    "# Optionally, evaluate with 5-fold cross-validation on the training set.\n",
+    "cv_scores = cross_val_score(best_gb_clf, X_train, y_train, cv=5, scoring='accuracy')\n",
+    "print(f\"Cross-Validation Accuracy: {np.mean(cv_scores):.2f} ± {np.std(cv_scores):.2f}\")\n",
     "\n",
-    "# Evaluate on validation set\n",
-    "val_preds = stacked_clf.predict(X_val)\n",
+    "# Train the best model on the full training set.\n",
+    "best_gb_clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate the model on the validation set.\n",
+    "val_preds = best_gb_clf.predict(X_val)\n",
     "val_accuracy = accuracy_score(y_val, val_preds)\n",
-    "print(f\"Validation Accuracy: {val_accuracy:.4f}\")\n"
+    "print(f\"Validation Accuracy: {val_accuracy:.2f}\")\n",
+    "\n",
+    "# If you have a test DataFrame (df_test) with an 'id' column, generate a submission file.\n",
+    "if 'df_test' in globals():\n",
+    "    # Make sure df_test is preprocessed in the same way as df_en.\n",
+    "    test_preds = best_gb_clf.predict(df_test.drop(columns=[\"id\"]))\n",
+    "    submission = pd.DataFrame({\n",
+    "        \"id\": df_test[\"id\"],\n",
+    "        \"class\": test_preds\n",
+    "    })\n",
+    "    submission.to_csv(\"submission.csv\", index=False)\n",
+    "    print(\"Submission file saved as submission.csv\")\n",
+    "\n"
    ]
   },
   {
